--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
 <!-- <img src="assets/images/lhaminha1.JPG" class="ca-u-card-avatar-small" /> -->
 <app-card-avatar-small>
-  <img src="assets/images/lhaminha1.JPG" />
+  <img src="assets/images/lhaminha1.JPG" class="ca-u-card-avatar-large" />
 </app-card-avatar-small>
 
 <!-- <img src="assets/images/lhaminha1.JPG" class="ca-u-card-avatar-large" /> -->
